--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
 </div>
 <div class="gap">
 </div>
-<div class="box"></div>
 
+<div class="boxdiv">
+<div class="box"></div>
+</div>
+
+<div class="gap">
+</div>
+
+<div class="headline"> <h1>Circle Animation</h1>
+</div>
+
+<div class="circlediv">
+<div class="circle"></div>
+</div>
 
 </body>
 </html>
