--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
 
 <div class="headline"> <h1>Circle Animation</h1>
 </div>
-
+<div class="gap">
+</div>
 <div class="circlediv">
 <div class="circle"></div>
+</div>
+
+<div class="gap">
 </div>
 
 </body>
